--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,30 @@ body {
     border: 3px solid #FF8A1F;
     border-radius: 9999px;
 }
+
+.text-5F5F64 {
+    color: #5F5F64;
+}
+
+#philosophy {
+    background-color: rgba(82,192,255,0.25);
+    bottom: 1.9rem;
+}
+
+.three-quarters-circle {
+    width: 0px;
+    height: 0px;
+    border-radius: 30px;
+    border: 30px solid aqua;
+    border-top-color: transparent;
+    -webkit-transform: rotate(135deg);
+  }
+
+.three-quarters-circle-red {
+    width: 0px;
+    height: 0px;
+    border-radius: 5vw;
+    border: 5vw solid red;
+    border-top-color: transparent;
+    -webkit-transform: rotate(135deg);
+  }
